fix(data-grid): spacing and alignment in heading

--- a/packages/components/src/components/data-grid/data-grid.css
+++ b/packages/components/src/components/data-grid/data-grid.css
@@ -88,18 +88,22 @@
 .data-grid__title-block {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding-right: 62px;
+  justify-content: flex-end;
+  padding-right: var(--telekom-spacing-unit-x4);
   padding-left: var(--telekom-spacing-unit-x6);
 }
 
 .data-grid__heading {
+  flex-grow: 1;
+}
+
+.data-grid__title-block ::slotted(*) {
+  /* --spacing-x-actions-slotted */
+  margin-left: var(--telekom-spacing-unit-x2);
 }
 
 .data-grid__settings-menu {
-  position: absolute;
-  top: var(--telekom-spacing-unit-x4);
-  right: var(--telekom-spacing-unit-x4);
+  margin-left: var(--telekom-spacing-unit-x2);
 }
 
 .data-grid__scroll-container {
